--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 				<h2 class="title">Phrase Hunter</h2>
 				<h1 id = "game-over-message"></h1>
 				<button id ="btn__reset">Start Game</button>
+				<button id ="btn__new-game">New Game</button>
 			</div>
 
 			<div id="banner" class="section">
@@ -73,5 +74,12 @@
 			</div>
 		</div>
 
+		<script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
+		<script src="js/app.js"></script>
+		<script src="js/Game.js"></script>
+		<script src="js/Phrase.js"></script>
 	</body>
 </html>
