remember recently used indexes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<h2 class="title">Phrase Hunter</h2>
 				<h1 id = "game-over-message"></h1>
 				<button id ="btn__reset">Start Game</button>
-				<button id ="btn__new-game">New Game</button>
+				<button id ="btn__new-phrase">New Phrase</button>
 			</div>
 
 			<div id="banner" class="section">
