--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<div class="main-container">
 			<div id="overlay" class="start">
 				<h2 class="title">Phrase Hunter</h2>
+				<h3>Movie quotes edition</h3>
 				<h1 id = "game-over-message"></h1>
 				<button id ="btn__reset">Start Game</button>
 				<button id ="btn__new-phrase">New Phrase</button>
@@ -20,6 +21,7 @@
 
 			<div id="banner" class="section">
 				<h2 class="header">Phrase Hunter</h2>
+				<h3>Movie quotes edition</h3>
 			</div>
 
 			<div id="phrase" class="section">
